--- a/blocks/steps/steps.css
+++ b/blocks/steps/steps.css
@@ -1,5 +1,6 @@
 .steps.block {
     max-width: 1600px;
+    display: none;
 }
 
 .steps.block > div {
@@ -48,6 +49,10 @@
 
 .steps.block > div:nth-child(3) > div:nth-child(1) {
     order: 2;
+}
+
+.steps.block > div:nth-child(3) > div:nth-child(2) {
+    transform: translateX(-4px);
 }
 
 .steps.block > div:nth-child(3) > div:nth-child(2) {
